# docket

./: .codespellrc  .coveragerc-cli  .coveragerc-core  .coveragerc-memory  .cursorrules  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  CLAUDE.md  RACE.md  README.md  TASK_MEMORY.md  index.html  loq.toml  mkdocs.yml  pyproject.toml  sitecustomize.py  test_progress_debug.py
.claude/skills/audit-docs/: SKILL.md
.cursor/rules/: general.mdc
.github/: codecov.yml  dependabot.yml
.github/docs-audit/: check.py  prompt.md
.github/workflows/: chaos.yml  ci.yml  claude-code-review.yml  claude.yml  docs-audit.yml  docs.yml  publish.yml
chaos/: README.md  driver.py  producer.py  redis.py  signals.py  tasks.py  worker.py
docs/: advanced-patterns.md  api-reference.md  dependencies.md  dependency-injection.md  getting-started.md  index.md  observability.md  production.md  task-behaviors.md  task-patterns.md  testing.md
example/: find_and_flood.py
examples/: agenda_scatter.py  concurrency_control.py  fallback_arithmetic.py  fastapi_background_tasks.py  find_and_flood.py  local_development.py  self_contained_service.py  task_progress.py
plans/: fix-cancellation-handling.md
src/docket/: __init__.py  __main__.py  _cancellation.py  _cli_utils.py  _docket_snapshot.py  _execution_progress.py  _lua.py  _otel.py  _otel_stubs.py  _prometheus_exporter.py  _redis.py  _result_store.py  _telemetry.py  _uuid7.py  agenda.py  annotations.py  cli.py  dependencies.py  docket.py  exceptions.py  execution.py  instrumentation.py  state.py  strikelist.py  tasks.py  testing.py  worker.py
src/docket/_vendor/: Makefile  README.md  __init__.py
src/docket/_vendor/otel_prometheus/: README.md  __init__.py
src/docket/dependencies/: __init__.py  _base.py  _concurrency.py  _context.py  _contextual.py  _cooldown.py  _cron.py  _debounce.py  _depends.py  _functional.py  _perpetual.py  _progress.py  _ratelimit.py  _resolution.py  _retry.py  _shared.py  _timeout.py
tests/: _container.py  _key_leak_checker.py  conftest.py  sitecustomize.py  test_agenda.py  test_annotated_dependencies.py  test_automatic_perpetual_recovery.py  test_cancellation.py  test_claim_supersedes.py  test_cli.py  test_concurrency_basic.py  test_concurrency_control.py  test_concurrency_refresh.py  test_cooldown.py  test_debounce.py  test_dependencies.py  test_dependencies_advanced.py  test_dependencies_core.py  test_dependency_uniqueness.py  test_depends_typing.py  test_docket.py  test_docket_clear.py  test_docket_execution.py  test_docket_isolation.py  test_docket_keys.py  test_docket_registration.py  test_execution.py  test_execution_progress.py  test_execution_state.py  test_fakeredis_backend.py  test_fallback_task.py  test_fundamentals.py  test_handler_semantics.py  test_immediate_retry_state.py  test_instrumentation.py  test_instrumentation_suppression.py  test_instrumentation_tracing.py  test_key_leak_protection.py  test_lua_decorator.py  test_lua_decorator_keys.py  (+37 more)
tests/cli/: run.py  test_clear.py  test_module.py  test_snapshot.py  test_striking.py  test_tasks.py  test_url_validation.py  test_version.py  test_watch.py  test_worker.py  test_workers.py  utils.py  waiting.py
tests/cluster/: Dockerfile.test  conftest.py  docker-compose.yml  test_cluster.py
tests/concurrency_limits/: overlap.py  test_annotated.py  test_basic.py  test_errors_and_resilience.py  test_execution_patterns.py  test_redelivery.py  test_waiter_queue.py  test_worker_mechanics.py
tests/fundamentals/: __init__.py  test_annotated_dependencies.py  test_cron.py  test_idempotency.py  test_logging.py  test_perpetual.py  test_retries.py  test_scheduling.py  test_shared_dependencies.py  test_striking.py  test_timeouts.py
tests/instrumentation/: __init__.py  conftest.py  test_counters.py  test_export.py  test_tracing.py
tests/redis_py/: test_socket_timeout.py
tests/worker/: test_bootstrap.py  test_core.py  test_invariants.py  test_lease_reconnect.py  test_lifecycle.py  test_liveness.py  test_liveness_cleanup.py  test_reconnection.py  test_run_until_finished.py  test_scheduling.py  test_ttl_zero.py
